lavorazione dell'header

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 <body>
   <header>
     <div class="topbanner">
+      <img src="img/logo.svg" alt="" srcset="" id="the-booleaner-logo">
 
     </div>
-    <h1></h1>
-    <h4></h4>
-    <h6></h6>
+    <h1>Internet deve essere al servizio del "del bene pubblico": il manifesto di Tim-Berners-Lee</h1>
+    <h4>Scritto da <a href="" alt="The Booleaner" id="the-booleaner">The Booleaner</a></h4>
+    <h6>il 10/10/2020</h6>
 
 
 
@@ -54,18 +55,24 @@
       <tbody>
         <tr>
           <td>Lorem ipsum dolor</td>
-          <td>Lorem ipsum dolor></td>
-          <td></td>
+          <td>Lorem ipsum dolor</td>
+          <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias delectus rerum, vero ipsam ducimus
+            aliquid, officia, amet atque consequatur natus nam debitis obcaecati. Iste enim dicta dolor ipsum quae
+            commodi.</td>
         </tr>
         <tr>
           <td>Lorem ipsum dolor</td>
           <td>Lorem ipsum dolor</td>
-          <td></td>
+          <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate maiores adipisci accusamus, tempore
+            praesentium aspernatur, dicta impedit accusantium quos iure optio, repudiandae et hic! Ratione minus dicta
+            omnis illum doloremque.</td>
         </tr>
         <tr>
           <td>Lorem ipsum dolor</td>
           <td>Lorem ipsum dolor</td>
-          <td></td>
+          <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error reiciendis quidem eveniet ipsam provident
+            illo totam fuga? Iste, natus deleniti quae adipisci nostrum tenetur hic temporibus reprehenderit, quod qui
+            quo.</td>
         </tr>
       </tbody>
       <tfoot>
@@ -81,6 +88,7 @@
   <footer>
     <h6>Potrebbero interessarti</h6>
     <a href="" id="image-footer-1">Lorem ipsum dolor</a>
+    <br>
     <a href="" id="image-footer-2">Lorem ipsum dolor</a>
 
   </footer>
