sistemazione img di Tim

--- a/index.html
+++ b/index.html
@@ -18,15 +18,13 @@
     <h1>Internet deve essere al servizio del "del bene pubblico": il manifesto di Tim-Berners-Lee</h1>
     <h4>Scritto da <a href="" alt="The Booleaner" id="the-booleaner">The Booleaner</a></h4>
     <h6>il 10/10/2020</h6>
-
-
-
   </header>
   <main>
-    <img src="" alt="" srcset="">
-    <img src="" alt="" srcset="">
-    <h6></h6>
-    <h6></h6>
+
+    <img src="img/tim-1.jpg" alt="" srcset="">
+    <img src="img/tim-2.jpg" alt="" srcset="">
+    <p class="didascalia-img">1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
+    <p class="didascalia-img">2nd Photo: Wikimedia, by Paul Clarke</p>
     <p>
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. <span id="evidenziato">Totam excepturi quisquam voluptas
         voluptatem laudantium culpa cupiditate</span> temporibus aspernatur sint. Facilis ea obcaecati a dolorem modi
@@ -86,10 +84,10 @@
 
   </main>
   <footer>
-    <h6>Potrebbero interessarti</h6>
-    <a href="" id="image-footer-1">Lorem ipsum dolor</a>
+    <h3>Potrebbero interessarti</h3>
+    <a href="" id="a-footer-1">Lorem ipsum dolor</a>
     <br>
-    <a href="" id="image-footer-2">Lorem ipsum dolor</a>
+    <a href="" id="a-footer-2">Lorem ipsum dolor</a>
 
   </footer>
 
