bozza finale cercando soluzione per rimuovere i bordini vuoti della tabella

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 </head>
 
 <body>
-  <header>
-    <div class="topbanner">
-      <img src="img/logo.svg" alt="" srcset="" id="the-booleaner-logo">
+  <div class="topbanner">
+    <img src="img/logo.svg" alt="" srcset="" id="the-booleaner-logo">
 
-    </div>
+  </div>
+  <header>
+
     <h1>Internet deve essere al servizio del "del bene pubblico": il manifesto di Tim-Berners-Lee</h1>
     <h4>Scritto da <a href="" alt="The Booleaner" id="the-booleaner">The Booleaner</a></h4>
     <h6>il 10/10/2020</h6>
@@ -43,15 +44,15 @@
         Molestiae, hic?</li>
     </ul>
     <table>
-      <thead id="table-head">
-        <tr>
+      <thead>
+        <tr id="tr-head">
           <th>Lorem ipsum dolor</th>
           <th>Lorem ipsum dolor</th>
           <th>Lorem ipsum dolor</th>
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr class="tr-colored">
           <td>Lorem ipsum dolor</td>
           <td>Lorem ipsum dolor</td>
           <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias delectus rerum, vero ipsam ducimus
@@ -65,7 +66,7 @@
             praesentium aspernatur, dicta impedit accusantium quos iure optio, repudiandae et hic! Ratione minus dicta
             omnis illum doloremque.</td>
         </tr>
-        <tr>
+        <tr class="tr-colored">
           <td>Lorem ipsum dolor</td>
           <td>Lorem ipsum dolor</td>
           <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error reiciendis quidem eveniet ipsam provident
@@ -79,7 +80,9 @@
     </table>
     <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis labore ipsa, vitae est minima veritatis eaque
-      veniam unde maiores quisquam laboriosam eum, magni quis iusto possimus cupiditate quo, non dolores.
+      veniam unde <span id="evidenziato">Totam excepturi quisquam voluptas
+        voluptatem laudantium culpa cupiditate</span> maiores quisquam laboriosam eum, magni quis iusto possimus
+      cupiditate quo, non dolores.
     </p>
 
   </main>
