soluzione agli spazi in tabella

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <p class="didascalia-img">1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
     <p class="didascalia-img">2nd Photo: Wikimedia, by Paul Clarke</p>
     <p>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. <span id="evidenziato">Totam excepturi quisquam voluptas
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. <span class="evidenziato">Totam excepturi quisquam
+        voluptas
         voluptatem laudantium culpa cupiditate</span> temporibus aspernatur sint. Facilis ea obcaecati a dolorem modi
       porro aut cum quisquam magni.
     </p>
@@ -80,7 +81,7 @@
     </table>
     <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis labore ipsa, vitae est minima veritatis eaque
-      veniam unde <span id="evidenziato">Totam excepturi quisquam voluptas
+      veniam unde <span class="evidenziato">Totam excepturi quisquam voluptas
         voluptatem laudantium culpa cupiditate</span> maiores quisquam laboriosam eum, magni quis iusto possimus
       cupiditate quo, non dolores.
     </p>
