--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-  <div class="topbanner">
+  <nav class="topbanner">
     <img src="img/logo.svg" alt="" srcset="" id="the-booleaner-logo">
 
-  </div>
+  </nav>
   <header>
 
     <h1>Internet deve essere al servizio del "del bene pubblico": il manifesto di Tim-Berners-Lee</h1>
