agg commenti sul metodo di Gabriel e sist file CSS

--- a/index.html
+++ b/index.html
@@ -16,22 +16,24 @@
   <header>
 
     <h1>Internet deve essere al servizio del "del bene pubblico": il manifesto di Tim-Berners-Lee</h1>
+    <!-- Gabriel ha utilizzato dei div al posto di h4 e h6 -->
     <h4>Scritto da <a href="" alt="The Booleaner" id="the-booleaner">The Booleaner</a></h4>
     <h6>il 10/10/2020</h6>
   </header>
   <main>
-
+    <!-- Gabriel ha utilizzato il tag <figure> per incapsulare immagini e didascalie -->
     <img src="img/tim-1.jpg" alt="" srcset="">
     <img src="img/tim-2.jpg" alt="" srcset="">
     <p class="didascalia-img">1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
     <p class="didascalia-img">2nd Photo: Wikimedia, by Paul Clarke</p>
+    <!-- Qui Gabriel ha messo una section che ingloba il paragrafo -->
     <p>
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. <span class="evidenziato">Totam excepturi quisquam
         voluptas
         voluptatem laudantium culpa cupiditate</span> temporibus aspernatur sint. Facilis ea obcaecati a dolorem modi
       porro aut cum quisquam magni.
     </p>
-
+    <!-- Qui Gabriel ha messo una section che ingloba l'unordered list -->
     <ul>
       <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta reiciendis delectus, hic sint consequatur
         aliquam ab pariatur excepturi earum debitis perferendis vitae tempore expedita nihil libero fugit, provident
@@ -43,6 +45,7 @@
         quaerat eos sapiente reprehenderit corrupti doloremque rerum, alias ex fuga corporis, dolorem perspiciatis.
         Molestiae, hic?</li>
     </ul>
+    <!-- Gabriel ha aggiunto un'altra section di id="table" per inglobare la tabella -->
     <table>
       <thead>
         <tr id="tr-head">
@@ -78,6 +81,7 @@
 
       </tfoot>
     </table>
+    <!-- Gabriel ha aggiunto una section qui per contenere il <p> -->
     <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis labore ipsa, vitae est minima veritatis eaque
       veniam unde <span class="evidenziato">Totam excepturi quisquam voluptas
@@ -89,7 +93,7 @@
   <footer>
     <h3>Potrebbero interessarti</h3>
     <a href="" id="a-footer-1">Lorem ipsum dolor</a>
-    <br>
+
     <a href="" id="a-footer-2">Lorem ipsum dolor</a>
 
   </footer>
