fine correzione con discussione parte bonus

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Booleaner</title>
   <link rel="stylesheet" href="css/style.css">
+  <!-- <link rel="stylesheet" href="bonus.css"> -->
 </head>
 
 <body>
   <nav class="topbanner">
-    <img src="img/logo.svg" alt="" srcset="" id="the-booleaner-logo">
+    <div id="nav-inner">
+      <img src="img/logo.svg" alt="" srcset="" id="the-booleaner-logo">
+
+    </div>
   </nav>
   <header>
 
